# HideCppBanking

./: .gitignore  CMakeLists.txt  customer.cpp  customer_activities.h  customer_lists.h  employee.cpp  employee.h  employeearr.h  interface.cpp  interface.h  returns.txt  statistics.cpp  statistics.h  statstics.cpp  statstics.h
bankpay-main/bankpay-main/: index.html  script.js  style.css
data/: cust.json.bak  customers.json  employees.json  loans.json  test.json  undone.json
docs/: HowToGit.md
headers/: customer.h  customer_activities.h  customer_lists.h  employee.h  employee_list.h  employeearr.h  helpers.h  interface.h  statistics.h  statstics.h
src/: customer.cpp  employee.cpp  helpers.cpp  interface.cpp  main.cpp  out  statistics.cpp  statstics.cpp
